# QAutoLinguist

./: .gitattributes  .gitignore  .gitmodules  .qal-config.ini  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test2.tsf
.github/workflows/: python-package.yml
.qal_cache/: config  nodes
qautolinguist/: .qal-config.ini  cache_impl.py  cli.py  config.py  config_decls  config_decls.json  config_template.py  consts.py  debugstyles.py  exceptions.py  helpers.py  logs.py  main.py  param_decls.json  pathex.py  qal.py  qautotranslator.py  splash.py  translator.py  ts.toml  welcomer.py
qautolinguist/_tsf_files/: composer.py
qautolinguist/_tsf_parser_legacy/: README.md  TsfParser.py  __init__.py
qautolinguist/benchs/: .qal_config.ini  benchs.py
qautolinguist/cli/: __init__.py  __main__.py  start_page.py
qautolinguist/models/: LangSelector.py  cli.py  config.py  lang_selector.cpp  lang_selector.py  parser.py  translator.py
qautolinguist/pytomlpp/: _io.py
qautolinguist/qal_parser/: composer.py
qautolinguist/tests/: TODO.md  _gen_texts.py  benchs.py  model1.toml  model2.toml  test_config.py  test_qal.py  test_translator.py  tests.py
qautolinguist/tests/invalid/: invalid_list_elems.ini  invalid_paths.ini  miswritten_booleans.ini  uncompleted_required_section.ini
qautolinguist/tests/targets/: test.ui
qautolinguist/tests/valid/: good_config.ini  testing_config_overwrites.ini
qautolinguist/translators/: LICENCE.md  README.md  __init__.py  base.py  constants.py  deepl.py  engines.py  exceptions.py  google.py  microsoft.py  mt_quality.py  mymemory.py  validate.py
scripts/: using_wheel.py
translations/qt_font_files/: es.ts
translations/translatables/: it.toml
widgets/: LangSelector.py
