[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "requires-python", "dependencies", "entry-points", "scripts"]
name = "qautolinguist"
readme = "README.md"
license = {text = "Apache License Version 2.0"} # using name instead of file because we dont want to show all the licese in mypy only the name.
authors = [
  { name="Alvaro Monllor", email="alvarodrumer54@gmail.com" },
]
maintainers = [
  { name="Alvaro Monllor", email="alvarodrumer54@gmail.com" },
]
description = "Automatic configurable translator to internationalize Qt proyects though simple CLI."

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache 2.0 License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Typing :: Typed"
]
keywords = [
    "python3",
    "i10n",
    "pyqt5",
    "developer-tools",
    "qt-framework",
    "tools translation",
    "qt",
    "qt5",
    "pyside", 
    "pyside2",
    "qt4", 
    "qt-linguist",
    "pyqt",
    "i18n-tool",
]

[project.urls]
Homepage = "https://github.com/Backist/QAutoLinguist"
Issues = "https://github.com/Backist/QAutoLinguist/issues"
Documentation = "https://backest-lad.gitbook.io/qautolinguist/"
Repository = "https://github.com/Backist/QAutoLinguist.git"