[metadata]
version = 0.1.0
 
[options]
zip_safe = False
include_package_data = True
install_requires = file: requirements.txt
python_requires = >=3.8
package_dir=
    =qautolinguist

[options.packages.find]
where=qautolinguist
exclude= 
    qautolinguist/_tsf_parser_legacy

[options.entry_points]
console_scripts =
    qautolinguist = qautolinguist.cli:qautolinguist

