[metadata]
version = 0.1.0.dev1
 
[options]
zip_safe = False
include_package_data = True
install_requires = file: requirements.txt
python_requires = >=3.8
packages = find_namespace: 

[options.packages.find]
exclude= 
    third-party*
    widgets*
    scripts*
    # qautolinguist/qal_parser*    # since we keep that parser in the project must not nessesary (legacy).

[options.entry_points]
console_scripts =
    qautolinguist = qautolinguist.cli:run_cli

[options.package_data]
qautolinguist.static = 
    *.json

[sdist]
formats = zip

# [tool.setuptools.setup_requires]
# scripts/install_pytomlpp.py
